--- a/html/tab1.html
+++ b/html/tab1.html
@@ -1,4 +1,7 @@
 <h2>INTRODUCTION</h2>
+<p>
+  Trough the following work, some concepts will be explained, making use of different technological tools such as codes and platforms such as Github and Codesandbox.
+</p>
 <h4>CONCEPTS OF THIS PROJECT</h4>
 <h4>Electric energy</h4>
 <p>
