--- a/html/tab3.html
+++ b/html/tab3.html
@@ -10,13 +10,12 @@
 
 <!------------ Write from here ------------>
 
-<p><span style="font-weight: bold;">By:</span> Write here your name</p>
+<p><span style="font-weight: bold;">By:</span> Salome Saldarriaga Valencia</p>
 <h4>Linear regression: kWh vs Month</h4>
-<p>
-  This second part of the project must be done individual. For each plot, you
-  must show evidence about your bill house public services to proof that your
-  information is true.
-</p>
+<img src="Images/diciembre1.jpg" />
+<img src="Images/enero1.jpg" />
+<img src="Images/faltantes.jpg" />
+
 <div id="analysis2Plot1"></div>
 <p id="analysis2Eqn1" style="text-align: center;"></p>
 <h5>About the observed behavior</h5>
@@ -31,6 +30,9 @@
     Estimate how many energy you will consume in the next month. Use LaTeX
     syntax in order to compute that.
   </li>
+
+  $$ y=(-2.50)(6)+129.30=114.3 $$
+
   <li>
     A conclusion about your own interpretation on how you should reduce or
     remain stable the consumption of electric energy.
@@ -51,6 +53,9 @@
     Estimate how many energy will be consumed in a residential unit where $200$
     people live. Use LaTeX syntax in order to compute that.
   </li>
+
+  $$ y=(82.11)(200)+(-125.74)=16296.26 $$
+
   <li>
     A conclusion about your own interpretation on why is given that relation
     between these two variables.
