--- a/html/tab2.html
+++ b/html/tab2.html
@@ -10,13 +10,10 @@
 
 <!------------ Write from here ------------>
 
-<p><span style="font-weight: bold;">By:</span> Write here your name</p>
+<p><span style="font-weight: bold;">By:</span> Samantha Aguirre Ceballos</p>
 <h4>Linear regression: kWh vs Month</h4>
-<p>
-  This second part of the project must be done individual. For each plot, you
-  must show evidence about your bill house public services to proof that your
-  information is true.
-</p>
+<img src="Images/febrero.jpg" />
+<img src="Images/abril.jpg" />
 <div id="analysis1Plot1"></div>
 <p id="analysis1Eqn1" style="text-align: center;"></p>
 <h5>About the observed behavior</h5>
@@ -31,6 +28,9 @@
     Estimate how many energy you will consume in the next month. Use LaTeX
     syntax in order to compute that.
   </li>
+
+  $$ y=(-5.90)(6)+178.90=143.5 $$
+
   <li>
     A conclusion about your own interpretation on how you should reduce or
     remain stable the consumption of electric energy.
@@ -51,6 +51,9 @@
     Estimate how many energy will be consumed in a residential unit where $200$
     people live. Use LaTeX syntax in order to compute that.
   </li>
+
+  $$ y=(82.11)(200)+(-125.74)=16296.26 $$
+
   <li>
     A conclusion about your own interpretation on why is given that relation
     between these two variables.
