--- a/html/tab2.html
+++ b/html/tab2.html
@@ -23,33 +23,48 @@
 </p>
 <ul>
   <h5>
-  <li>The increasement and decreasement of the regression.</li>
+    <li>The increasement and decreasement of the regression.</li>
   </h5>
   <p>
-      According to the graphic, in my house there was a decrease because as the months passed the energy consumption decreased, except in the month of February when there was a notable increase.
+    According to the graphic, in my house there was a decrease because as the
+    months passed the energy consumption decreased, except in the month of
+    February when there was a notable increase.
   </p>
-  <h5
-  <li>The relation among the dots regarding the colors.</li>
+  <h5>
+    <li>The relation among the dots regarding the colors.</li>
   </h5>
   <p>
-      The red points don´t have a defined behavior with respect to the regression line, because from the graphic it can be analyzed that the energy consumption is not stable, therefore, each month has a variation.
+    The red points don´t have a defined behavior with respect to the regression
+    line, because from the graphic it can be analyzed that the energy
+    consumption is not stable, therefore, each month has a variation.
   </p>
-  <h5
-  <li>
-    Estimate how many energy you will consume in the next month. Use LaTeX
-    syntax in order to compute that.
-  </li>
+  <h5>
+    <li>
+      Estimate how many energy you will consume in the next month. Use LaTeX
+      syntax in order to compute that.
+    </li>
   </h5>
   $$ y=(-5.90)(6)+178.90=143.5 $$
   <p>
     ANSWER: It is estimated that next month 143.5 KWH will be consumed.
   </p>
   <h5>
-  <li>
-    A conclusion about your own interpretation on how you should reduce or
-    remain stable the consumption of electric energy.
-  </li>
-</h5>
+    <li>
+      A conclusion about your own interpretation on how you should reduce or
+      remain stable the consumption of electric energy.
+    </li>
+  </h5>
+  <p>
+    In conclusion, the energy consumption of my house has an average that
+    oscillates between 158 KWH and 170 KWH, therefore, it remains stable, except
+    in the month of February when there was an increase; and March, which was
+    the month with the least consumption.
+  </p>
+  <p>
+    Energy waste can be reduced in different ways, for example, turning off
+    lights that are not needed, using daylight, unplugging cables that are not
+    in use, opening windows and avoiding the use of air conditioning, etc.
+  </p>
 </ul>
 <h4>Linear regression: Residents vs kWh</h4>
 <div id="analysis1Plot2"></div>
@@ -64,13 +79,16 @@
     <li>The increasement and decreasement of the regression.</li>
   </h5>
   <p>
-      According to the graphic, there was an increase in energy, because the more people live in a house, the higher the consumption.
+    According to the graphic, there was an increase in energy, because the more
+    people live in a house, the higher the consumption.
   </p>
   <h5>
     <li>The relation among the dots regarding the colors.</li>
   </h5>
   <p>
-      According to the relation between the dots with respect to the colors, it doesn´t matter how many people live in a house, because some families with few members spend more than families with more members and vice versa.
+    According to the relation between the dots with respect to the colors, it
+    doesn´t matter how many people live in a house, because some families with
+    few members spend more than families with more members and vice versa.
   </p>
   <h5>
     <li>
@@ -80,7 +98,10 @@
   </h5>
   $$ y=(82.11)(200)+(-125.74)=16296.26 $$
   <p>
-    ANSWER: It is estimated that next month 16296.26 KWH will be consumed in a residential unit where 200 people live.
+    ANSWER: It is estimated that next month 16296.26 KWH will be consumed in a
+    residential unit where 200 people live.
+  </p>
+
   <h5>
     <li>
       A conclusion about your own interpretation on why is given that relation
