--- a/html/tab3.html
+++ b/html/tab3.html
@@ -11,10 +11,12 @@
 <!------------ Write from here ------------>
 
 <p><span style="font-weight: bold;">By:</span> Salome Saldarriaga Valencia</p>
-<h4>Linear regression: kWh vs Month</h4>
 <img src="Images/diciembre1.jpg" />
 <img src="Images/enero1.jpg" />
-<img src="Images/faltantes.jpg" />
+<img src="Images/febrero1.jpg" />
+<img src="Images/marzo1.jpg" />
+<img src="Images/abril1.jpg" />
+<h4>Linear regression: kWh vs Month</h4>
 
 <div id="analysis2Plot1"></div>
 <p id="analysis2Eqn1" style="text-align: center;"></p>
@@ -24,20 +26,48 @@
   displays that behavior in terms of:
 </p>
 <ul>
-  <li>The increasement and decreasement of the regression.</li>
-  <li>The relation among the dots regarding the colors.</li>
-  <li>
-    Estimate how many energy you will consume in the next month. Use LaTeX
-    syntax in order to compute that.
-  </li>
+  <li><h5>The increasement and decreasement of the regression.</h5></li>
+  <p>
+    According to the graphic we can see that all the time it looks very stable
+    since almost the same amount of Kwh is spent every month, there was only a
+    slight increase in month one, and in month four a slight decrease in Kwh
+  </p>
+  <li><h5>The relation among the dots regarding the colors.</h5></li>
+  <p>
+      In month one it was the month in which energy was used the most compared 
+      to the other months, from then on the energy used decreased and for this
+       reason the linear regression in the graph shows us a noticeable decrease
+  </p>
+  <p>
+    <li>
+      <h5>
+        Estimate how many energy you will consume in the next month. Use LaTeX
+        syntax in order to compute that.
+      </h5>
+    </li>
 
-  $$ y=(-2.50)(6)+129.30=114.3 $$
-
-  <li>
-    A conclusion about your own interpretation on how you should reduce or
-    remain stable the consumption of electric energy.
-  </li>
+    $$ y=(-2.50)(6)+129.30=114.3 $$
+    <p>
+    R=/ It is estimated that next month 114.3 Kw will be consumed
+    </p>
+    <li>
+     <h5>
+      A conclusion about your own interpretation on how you should reduce or
+      remain stable the consumption of electric energy.
+     </h5>
+     <p>
+        The average electricity consumption in the home ranges from 110 to 
+        129 Kwh per month. This number can vary according to different 
+        factors, for example: in month one of the graph there is a large 
+        increase in light, because it is the month of December, for which 
+        the lights are turned on and cause more expenses, of thereafter, 
+        they return to an average, because daily activities are carried out
+         normally, thus showing a decrease in the linear regression
+    </p>
+    </li>
+  </p>
 </ul>
+
 <h4>Linear regression: Residents vs kWh</h4>
 <div id="analysis2Plot2"></div>
 <p id="analysis2Eqn2" style="text-align: center;"></p>
@@ -47,17 +77,41 @@
   displays that behavior in terms of:
 </p>
 <ul>
-  <li>The increasement and decreasement of the regression.</li>
-  <li>The relation among the dots regarding the colors.</li>
-  <li>
+  <li><h5>The increasement and decreasement of the regression.</h5></li>
+  <p>
+      When we look at the table, we see that almost all respondents have
+       three residents, there is only a minor variation of two and a brief
+       increase of 4, but everyone still feels very even, which is reflected
+       when looking at the number of points joined. Until one arrives that
+       moves away in a very noticeable way (728Kwh and 8 residents) and 
+      makes us observe a increasement and decreasement of the regression.</h5></li>
+      <p>
+  </p>
+  <li><h5>The relation among the dots regarding the colors.</h5></li>
+  <p>
+      The graph clearly shows us that the energy consumption of 3 people in a 
+      home is the most frequent, but we also have two slight variations that 
+      make our linear regression not straight, but show either growth or decrease,
+       but in our case it is a remarkable increasement
+  </p>
+  <li><h5>
     Estimate how many energy will be consumed in a residential unit where $200$
-    people live. Use LaTeX syntax in order to compute that.
-  </li>
+    people live. Use LaTeX syntax in order to compute that. </h5></li>
+  <p>
+    $$ y=(108.85)(200)+(-203.37)=21566.63 $$
+    R=/ In a residential unit, where 200 people live, it is estimated to consume 
+    21566.63 Kwh
+  </p>
 
-  $$ y=(82.11)(200)+(-125.74)=16296.26 $$
-
-  <li>
-    A conclusion about your own interpretation on why is given that relation
-    between these two variables.
-  </li>
+  <li><h5>A conclusion about your own interpretation on why is given that relation
+      between these two variables.
+    </h5></li>
+    <p>
+        It can be seen that the graph has energy costs that oscillate between
+        98 and 140 Kwh, it is stable; and the residents are also in a similar
+        range, between 2 and 4 people.
+        However, this has a sudden change at one point, since there is a household
+        that has 8 residents and uses 728 Kwh, which makes the linear regression
+        grow rapidly.
+    </p>
 </ul>
