--- a/html/tab4.html
+++ b/html/tab4.html
@@ -11,32 +11,101 @@
 
 <!------------ Write from here ------------>
 
-    <h4>Linear regression: kWh vs Month</h4>
-    <p>This second part of the project must be done individual.
-      For each plot, you must show evidence about your bill house public services to proof that your information is true.
-    </p>
-    <div id="analysis3Plot1"></div>
-    <p id="analysis3Eqn1" style="text-align: center"></p>
-    <h5>About the observed behavior</h5>
-    <p>According to the collected data from the plot, explain why the graphic displays that behavior in terms of:
+<p><span style="font-weight: bold;">By:</span> Juan Jose Ospina Valencia</p>
+<img src="Images/diciembreyenero.jpg" />
+<img src="Images/faltantesospina.jpg" />
+<h4>Linear regression: kWh vs Month</h4>
+<p>This second part of the project must be done individual.
+  For each plot, you must show evidence about your bill house public services to proof that your information is true.
+</p>
+<div id="analysis3Plot1"></div>
+<p id="analysis3Eqn1" style="text-align: center"></p>
+<h5>About the observed behavior</h5>
+<p>
+  According to the collected data from the plot, explain why the graphic 
+  displays that behavior in terms of:
+  </p>
+  <ul>
+      <li><h5>The increasement and decreasement of the regression.</h5></li>
+        <p>
+            Compared to previous months, in the month of April there is a notable
+             growth of KWH, In turn, in the month of February there was a growth 
+             of KWH but not so notable
       </p>
-      <ul>
-            <li>The increasement and decreasement of the regression.</li>
-            <li>The relation among the dots regarding the colors.</li>
-            <li>Estimate how many energy you will consume in the next month. Use LaTeX syntax in order to compute that.</li>
-            <li>A conclusion about your own interpretation on how you should reduce or remain stable the consumption of electric energy.</li>
-      </ul>
-    <h4>Linear regression: Residents vs kWh</h4>
-    <div id="analysis3Plot2"></div>
-    <p id="eanalysis3Eqn2" style="text-align: center"></p>
-    <h5>About the observed behavior</h5>
-    <p>According to the collected data from the plot, explain why the graphic displays that behavior in terms of:
+
+      <li><h5>The relation among the dots regarding the colors.</h5></li>
+        <p>
+            What is shown is that, as the months progress, the KWH usage is 
+            higher, however, it is still inconstant, that is, it increases 
+            and decreases, in a way that it increases more than it decreases.
+       </p>
+
+      <li><h5>Estimate how many energy you will consume in the next month.
+         Use LaTeX syntax in order to compute that.</li>
+
+       <p>
+      $$ y=(16.20)(6)+(-15.60)=81.6 $$
+      </p>
+    
+        <li><h5>A conclusion about your own interpretation on how you should 
+          reduce or remain stable the consumption of electric energy.</h5></li>
+          <p>
+              One way to reduce the use of electrical energy is by disconnecting
+              all electronic devices that are not being used, or by reducing the
+              time they are used, and to conclude, we can say that during the 
+              months of December and January it is a very low use of KWH due to
+              the fact that those times are for parties and studies, and the 
+              following months, you can see a variation between February, March
+              and April, which is due to the fact that my mother works in person 
+              and virtually, and constantly has changes of schedules every month 
+          </p>
+  </ul>
+<h4>Linear regression: Residents vs kWh</h4>
+<div id="analysis3Plot2"></div>
+<p id="eanalysis3Eqn2" style="text-align: center"></p>
+<h5>About the observed behavior</h5>
+<p>According to the collected data from the plot, explain why the graphic 
+  displays that behavior in terms of:
+</p>
+<ul>
+    <li><h5>The increasement and decreasement of the regression.</h5></li>
+    <p>
+        We can see how there is an inconstancy, and a peculiarity in the KWH
+        expense, and that is that there are some people who, even if they 
+        live with few people, can generate a higher KWH expense than can 
+        generate up to 4 people together, however, it does not show how the
+        graph tends to be increasing
     </p>
-    <ul>
-         <li>The increasement and decreasement of the regression.</li>
-         <li>The relation among the dots regarding the colors.</li>
-         <li>Estimate how many energy will be consumed in a residential unit where $200$ people live. Use LaTeX syntax in order to compute that.</li>
-         <li>A conclusion about your own interpretation on why is given that relation between these two variables.</li>
-      </ul>
+    <li><h5>The relation among the dots regarding the colors.</h5></li>
+    <p>
+        What the graph shows us is that HWK consumption will not always
+        depend on the number of people living in the same household, 
+        since 2 people who have many virtual tasks or spend a lot of 
+        time at home may spend more HWK that 4 people who are hardly 
+        at home, even so, it shows us how the graph tends to show that
+        the more people, the more KWH are used in a house
+    </p>
+     <li><h5>Estimate how many energy will be consumed in a residential 
+       unit where $200$ people live. Use LaTeX syntax in order to compute 
+       that.</h5></li>
+       <p>
+         $$ y=(82.11)(200)+(-125.74)=16296.26 $$
+      </p>
+     <li><h5>A conclusion about your own interpretation on why is given 
+       that relation between these two variables.</h5></li>
+       <p>
+          Here is a situation, and it is that the regression line shows us
+          that the more people there are in a house, the more KWH are spent,
+          even so, it does not always mean this, since there may be fewer
+          people who need to do a greater use of the different electronic
+          devices that generate an expense of KWH, but, generally, a 
+          greater number of people, generates a greater expense, therefore,
+          this relation is given, since the expense that occurs in KWH varies,
+          among people those who are few in the same house but use a lot of 
+          electricity, and among those who are many people in the same house
+          but who do not use as much energy.
+
+      </p>
+  </ul>
 
 </section>
