--- a/html/tab2.html
+++ b/html/tab2.html
@@ -108,15 +108,15 @@
       between these two variables.
     </li>
   </h5>
-  <p>
+  <li>
     The graphic is very scattered, and therefore does not have a defined
     behavior.
-  </p>
-  <p>Families of 2 and 4 members have a similar energy consumption.</p>
-  <p>
+  </li>
+  <li>Families of 2 and 4 members have a similar energy consumption.</li>
+  <li>
     It can be seen that the more people live in a house, the higher the energy
     consumption, however, the family of 6 members is the one that spends the
     least, because they are more aware of saving energy and taking care of the
     environment.
-  </p>
+  </li>
 </ul>
